release: prepare folia 0.5.0